--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,39 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-817.2KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-1.29MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-318.2KB/s(Youtube:不良林), server: 13.125.218.170, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇸🇬 新加坡-235.8KB/s(Youtube:不良林), server: sg3.v2yyds.cc, port: 32110, type: trojan, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2, sni: sg3.v2yyds.cc, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.65MB/s(Youtube:不良林), server: us24051.cloudmatrix.xyz, port: 24051, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: us24051.cloudmatrix.xyz}}
+  - {name: 🇨🇳 中国-4.65MB/s(Youtube:不良林), server: sg2601.cloudmatrix.xyz, port: 2601, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: sg2601.cloudmatrix.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-817.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-318.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-235.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-817.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-318.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-235.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-817.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-318.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-235.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +48,29 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-817.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-318.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-235.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-817.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-318.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-235.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-817.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-318.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-235.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +86,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-817.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-318.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-235.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-298.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
