--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,31 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-205.0KB/s(Youtube:不良林), server: 116.162.43.38, port: 30075, type: vmess, uuid: cf8acaed-8ea7-3caf-b457-3ba13b64d8dd, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: 116.162.43.38}}
-  - {name: 🇨🇳 中国-3.54MB/s(Youtube:不良林), server: us24053.cloudmatrix.xyz, port: 24053, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: us24053.cloudmatrix.xyz}}
+  - {name: 🇩🇪 德国-2.01MB/s(Youtube:不良林), server: 165.22.93.103, port: 28443, type: trojan, password: c94c922d-c833-48c1-b9d1-81c8b7b826f9, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-892.0KB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: c94c922d-c833-48c1-b9d1-81c8b7b826f9, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.43MB/s(Youtube:不良林), server: gzydddns.xyz, port: 11846, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 21002:3aJ2CV, obfs-param: 35cad21002.microsoft.com}
+  - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-1.40MB/s(Youtube:不良林), server: us2407.cloudmatrix.xyz, port: 2407, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: us2407.cloudmatrix.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-205.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-205.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-205.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -40,23 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-205.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-205.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-205.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -72,8 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-205.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
