--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇩🇪 德国-2.01MB/s(Youtube:不良林), server: 165.22.93.103, port: 28443, type: trojan, password: c94c922d-c833-48c1-b9d1-81c8b7b826f9, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-892.0KB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: c94c922d-c833-48c1-b9d1-81c8b7b826f9, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.43MB/s(Youtube:不良林), server: gzydddns.xyz, port: 11846, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 21002:3aJ2CV, obfs-param: 35cad21002.microsoft.com}
   - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇩🇪 德国-892.0KB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: c94c922d-c833-48c1-b9d1-81c8b7b826f9, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.39MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.40MB/s(Youtube:不良林), server: us2407.cloudmatrix.xyz, port: 2407, type: vmess, uuid: a992be42-bed4-3037-8788-9e860cd635d3, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: us2407.cloudmatrix.xyz}}
+  - {name: 🇯🇵 日本-1.22MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇯🇵 日本-320.5KB/s(Youtube:不良林), server: 54.238.232.202, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-316.5KB/s(Youtube:不良林), server: 45.61.174.36, port: 31325, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.57MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -17,20 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -38,10 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -53,20 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -74,10 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,10 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-892.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-320.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
